# emoSEC

./: .gitignore  METCS777-term-paper-code-sample-doc-Team6.py  README.md  config.py  demo_inference.py  feature_udfs.py  lexicon_utils.py  prepare_data.sh  pyproject.toml  requirements.txt  training_utils.py
src/emo_spark/: __init__.py  config.py  constants.py  data.py  demo.py  evaluation.py  features.py  main.py  metrics.py  models.py  pipeline.py  spark.py
